# image-generation-models

./: README.md  pyproject.toml  train.py
src/configs/: train.yaml
src/configs/dataloader/: default.yaml
src/configs/metrics/: inferencer.yaml  trainer.yaml
src/configs/model/: ddpm.yaml  vae.yaml
src/dataset/: base.py  collate.py  mnist.py
src/logger/: utils.py
src/loss/: ddpm.py  vae.py
src/metrics/: fid.py
src/model/: base.py  utils.py
src/model/ddpm/: __init__.py  attention.py  model.py  noise_scheduler.py  residual.py  unet.py
src/model/vae/: __init__.py  attention.py  model.py  residual.py
src/trainer/: base.py  trainer.py
